Customized bootstrap styles for home page

--- a/app/assets/stylesheets/bootstrap_and_customization.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.scss
@@ -1,1 +1,19 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg: #ecf0f1;
+$brand-primary: #e74c3c;
+
+$font-family-sans-serif: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+$navbar-height: 45px;
+$navbar-default-bg: white;
+$navbar-default-brand-color: #c0392b;
+$jumbotron-bg: white;
+
+
 @import 'bootstrap';
+
+
+.navbar-brand {
+  font-weight: bold;
+}
