--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,8 @@
-<div class="jumbotron">
+<div class="jumbotron text-center">
   <h1>Welcome to my app!</h1>
-  <p>Click here to <%= link_to 'Sign up', '#', class: "btn btn-primary btn-lg" %></p>
+  <p>
+    <%= link_to 'Sign in', '#', class: "btn btn-default btn-lg" %>
+    <%= link_to 'Sign up', '#', class: "btn btn-primary btn-lg" %>
+  </p>
+
 </div>
