--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
 <div class="jumbotron text-center">
   <h1>Welcome to my app!</h1>
+
+  <% if !user_signed_in? then %>
   <p>
-    <%= link_to 'Sign in', '#', class: "btn btn-default btn-lg" %>
-    <%= link_to 'Sign up', '#', class: "btn btn-primary btn-lg" %>
+    <%= link_to 'Sign in', new_user_session_path, class: "btn btn-default btn-lg" %>
+    <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-primary btn-lg" %>
   </p>
+  <% end %>
 
 </div>
