--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,7 +13,7 @@
         <%= f.email_field :email, autofocus: true, class: "form-control" %>
       </div>
 
-      <div class="actions">
+      <div class="actions form-group">
         <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
       </div>
     <% end %>
