--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -2,17 +2,21 @@
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
       <% if pin.image.exists? %>
-        <%= image_tag pin.image(:medium) %>
+        <%= link_to image_tag(pin.image(:medium)), pin %>
       <% end %>
 
       <div class="panel-body">
-        <%= pin.description %>
-        <%= pin.user.email if pin.user %>
-        <%= link_to 'Show', pin %>
+        <p><%= pin.description %></p>
+        <p><strong><%= pin.user.email if pin.user %></strong></p>
+
+
         <% if pin.user == current_user %> 
+          <div class="actions">
           <%= link_to 'Edit', edit_pin_path(pin) %>
           <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
         <% end %>
+
       </div>
     </div>
   <% end %>
