--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,13 +1,21 @@
-<div>
-  <%= image_tag @pin.image(:medium) %>
-</div>
-
-<p>
-  <strong>Description:</strong>
-  <%= @pin.description %>
-</p>
-
-<% if @pin.user == current_user %> 
-  <%= link_to 'Edit', edit_pin_path(@pin) %> |
-<% end %>
 <%= link_to 'Back', pins_path %>
+
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <div class="panel panel-default">
+      
+      <%= image_tag @pin.image, style: "width: 100%;"%>
+      
+
+      <div class="panel-body">
+        <p><%= @pin.description %></p>
+        <p><strong><%= @pin.user.email if @pin.user %></strong></p>
+
+        <% if @pin.user == current_user %> 
+          <%= link_to 'Edit', edit_pin_path(@pin) %>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
+</div>
