Changed root path

--- a/app/assets/stylesheets/bootstrap_and_customization.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.scss
@@ -10,8 +10,8 @@ $navbar-default-bg: white;
 $navbar-default-brand-color: #c0392b;
 $jumbotron-bg: white;
 
-
-@import 'bootstrap';
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 
 .navbar-brand {
