--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,3 +1,5 @@
+<%= render "pages/home" unless user_signed_in? %>
+
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
@@ -7,17 +9,25 @@
 
       <div class="panel-body">
         <p><%= pin.description %></p>
-        <p><strong><%= pin.user.email if pin.user %></strong></p>
-
-
-        <% if pin.user == current_user %> 
-          <div class="actions">
-          <%= link_to 'Edit', edit_pin_path(pin) %>
-          <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
-          </div>
-        <% end %>
-
+        <strong><%= pin.user.email if pin.user %></strong>
       </div>
+
+      <% if pin.user == current_user %> 
+        <div class="panel-footer">
+          <div class="actions">
+            <%= link_to edit_pin_path(pin) do %>
+              <span class="glyphicon glyphicon-edit"></span>
+              Edit
+            <% end %>
+            <%= link_to pin, method: :delete, style: "margin-left: 1.5rem;", data: { confirm: 'Are you sure?' } do %>
+              <span class="glyphicon glyphicon-trash"></span>
+              Delete
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+
+
     </div>
   <% end %>
 </div>
