--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,4 +1,7 @@
-<%= link_to 'Back', pins_path %>
+<%= link_to pins_path do %>
+  <span class="glyphicon glyphicon-menu-left"></span>
+  Back
+<% end %>
 
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
@@ -12,7 +15,10 @@
         <p><strong><%= @pin.user.email if @pin.user %></strong></p>
 
         <% if @pin.user == current_user %> 
-          <%= link_to 'Edit', edit_pin_path(@pin) %>
+          <%= link_to edit_pin_path(@pin) do %>
+            <span class="glyphicon glyphicon-edit"></span>
+            Edit
+          <% end %>
         <% end %>
       </div>
 
