Load pins in index action in reverse chronological order

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,6 +1,6 @@
 <%= link_to pins_path do %>
-  <span class="glyphicon glyphicon-menu-left"></span>
-  Back
+  <span class="glyphicon glyphicon-chevron-left"></span>
+  All Pins
 <% end %>
 
 <div class="row">
