--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -9,7 +9,7 @@
 
       <div class="panel-body">
         <p><%= pin.description %></p>
-        <strong><%= pin.user.email if pin.user %></strong>
+        <strong><%= pin.user.name if pin.user %></strong>
       </div>
 
       <% if pin.user == current_user %> 
